...
        kind = MediaSourceKind.WEB,
        location = MediaSourceLocation.Online,
    ),
    createTestDefaultMedia(
        mediaId = "$SOURCE_WEB_SECONDARY.2",
        mediaSourceId = SOURCE_WEB_SECONDARY,
        originalTitle = "葬送的芙莉莲",
        download = ResourceLocation.HttpStreamingFile("https://example.com/2.m3u8"),
        originalUrl = "https://example.com/1",
        publishedTime = 4,
        episodeRange = EpisodeRange.single(EpisodeSort(2)),
        properties = createTestMediaProperties(
            subtitleLanguageIds = listOf(ChineseSimplified).map { it.id },
...
